kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  dep-app
  namespace: project
spec:
  selector:
    matchLabels:
      app: myapp-app
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp-app  
    spec:

      containers:
      - name: gymie
        image: utsav0077/project:1.0
        ports:
        - containerPort: 8000
          name: app-port
