kubernetes/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: project
spec:
  selector:
    app: myapp-app
  ports:
  - port: 9001
    targetPort: 8000
